--- a/productMods/templates/freemarker/edit/forms/css/addConcept.css
+++ b/productMods/templates/freemarker/edit/forms/css/addConcept.css
@@ -4,22 +4,11 @@
 	overflow:hidden;
 	width:100%;
 }
-.concepts .column {
-	float:left;
-	padding-right:3px;
-	clear:none !important; /*Overriding customFor div's clearing*/
-}
-
 .concepts .row {
 	clear:both;
 	float:left;
 	border-bottom: 1px solid #5F6464;
 }
-
-.conceptLabel {
-	width:220px;
-}
-
 .conceptType {
 	width: 40px;
 }
@@ -61,17 +50,19 @@ form#addConceptForm span#createOwnOne{
 	float:left;
 }
 
-.existingConcept .column , .conceptHeadings .column {
+.existingConcept .column, 
+.conceptHeadings .column,
+.concepts .column {
 	float:left;
 	padding-right:3px;
 	clear:none !important; /*Overriding customFor div's clearing*/
 }
 /*label and semantic type if it exists*/
-.existingConcept .conceptLabelInfo, .conceptHeadings .conceptLabelInfo {
-	width:220px;
-}
-
-.existingConcept .conceptVocabSource, .conceptHeadings .conceptVocabSource {
+.conceptLabel,
+.existingConcept .conceptLabelInfo, 
+.conceptHeadings .conceptLabelInfo,
+existingConcept .conceptVocabSource, 
+.conceptHeadings .conceptVocabSource {
 	width:220px;
 }
 
