--- a/productMods/css/visualization/visualization.css
+++ b/productMods/css/visualization/visualization.css
@@ -23,9 +23,6 @@ span.incomplete-data-holder,
     margin-top: 1.6em;
     font-size: 1em;
 }
-#incomplete-data-small {
-    margin-top: 1.6em;
-}
 .collaboratorship-icon {
     float: left;
     padding-right: 8px;
@@ -89,6 +86,21 @@ span.incomplete-data-holder,
 }
 .infoIcon {
     padding-right:30px;
+}
+.cache-info-small {
+    padding: 5px;
+    font-size: .8em;
+    color: #444;
+    border: dotted 1px #eee;
+    background-color: #ffb;
+    float: right;
+}
+.cache-info-vis {
+    padding: 5px;
+    color: #444;
+    border: dotted 1px #eee;
+    background-color: #ffb;
+    float: right;
 }
 
 /* ---------------------------*/
