--- a/installer/webapp/src/main/webapp/themes/fsm/css/screen.css
+++ b/installer/webapp/src/main/webapp/themes/fsm/css/screen.css
@@ -23,4 +23,4 @@ VIVO wilma theme: screen styles
 @charset "UTF-8";
 
 @import url("reset.css");
-@import url("wilma.css");
+@import url("fsm.css");
