--- a/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
@@ -16,7 +16,8 @@ VIVO tenderfoot theme: screen styles
 
 @charset "UTF-8";
 
-@import url("reset.css");
 @import url("../bootstrap/css/bootstrap.min.css");
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans");
+@import url("../bootstrap/css/bootstrap-theme.min.css");
+@import url("reset.css");
 @import url("tenderfoot.css");
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans");
