--- a/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
@@ -19,5 +19,6 @@ VIVO tenderfoot theme: screen styles
 @import url("../bootstrap/css/bootstrap.min.css");
 @import url("../bootstrap/css/bootstrap-theme.min.css");
 @import url("reset.css");
+@import url("individual-tenderfoot.css");
 @import url("tenderfoot.css");
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans");
