--- a/webapp/src/main/webapp/themes/tenderfoot/css/individual-tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/individual-tenderfoot.css
@@ -1,280 +1,14 @@
-header {
-    height:114px;
-}
-
-legend {
-    display: none;
-}
-
-#nav {
-    background: #f7f9f9;
-}
-
-#nav.affix {
-    position: fixed;
-    top: 0;
+article.property {
     width: 100%;
-    z-index:10;
 }
 
-#nav .container {
-    padding-left: 0px;
-    padding-right: 0px;
+article.property h3 {
+    background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e8e8e8 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
+    background-image: linear-gradient(to bottom, #f5f5f5 0%, #e8e8e8 100%);
+    background-repeat: repeat-x;
 }
 
-p.navbar-text {
-    margin-left: 15px;
-}
-
-body {
-    padding: 0;
-    height: 100%; /* needed for container min-height */
-    font-family: "Noto Sans", "Lucida Sans Unicode","Lucida Grande", Geneva, helvetica, sans-serif;
-    height: auto !important; /* real browsers */
-    height: 100%; /* IE6: treaded as min-height*/;
-    min-height: 100%; /* real browsers */
-    margin: 0 auto;
-    background: #f3f3f0 url(../images/header-background.png) center 0 no-repeat;
-}
-
-#wrapper-content {
-    background: none repeat scroll 0 0 #fff;
-}
-
-#property-tabs {
-    padding-right: 0px;
-}
-
-.row {
-    background: #ffffff;
-}
-
-.row.title {
-    background: #398AAC;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.row.title span {
-    color: #ffffff;
-}
-
-.row.title h1 {
-    margin-left: 10px;
-}
-
-.row-eq-height {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-}
-.photo-wrapper {
-    padding: 0 !important;
-    margin: 0 !important;
-    background: #f3f3f0;
-}
-
-.photo-wrapper img {
-    height: 100%;
-    width: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
-    object-fit: contain;
-}
-
-.person-details {
-    background: #f3f3f0;
-}
-
-/* HEADER ------>  */
-#branding {
-    position: relative;
-//    width: 970px;
-    height: 114px;
-    margin: 0 auto;
-}
-#branding .row {
-    background-color:rgba(255, 255, 255, 0);
-}
-/* HEADER NAV------>  */
-ul#header-nav {
-    float: right;
-    list-style: none;
-    height: 30px;
-    padding-top: 10px;
-    margin-right: 13px;
-}
-ul#header-nav li {
-    float: left;
-    display: block;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-right: 1px solid #7c7d7f;
-    font-size: .7em;
-    color: #fff;
-}
-ul#header-nav li:last-child {
-    padding-left: 1px;
-    padding-right: 0;
-    border-right: none;
-}
-ul#header-nav a {
-    color: #fff;
-}
-ul#header-nav a:hover,
-ul#header-nav a:active {
-    text-decoration: none;
-    color: #999;
-}
-ul#header-nav a.log-out {
-    padding-left: 10px;
-}
-/* SEARCH ------>  */
-#search {
-    width: 396px;
-    height: 38px;
-    right: 10px;
-    padding-top: 5px;
-}
-#search-field {
-    width: 396px;
-    height: 38px;
-    background: url(../images/search-interior-pages.png) 0 0 no-repeat;
-}
-#search-field input.search {
-    text-decoration: none;
-    background-color: transparent;
-    color: #fff;
-    font-size: 14px;
-    border: none;
-    padding-left: 25px;
-    padding-top: 8px;
-    cursor: pointer;
-}
-input.search-vivo {
-    float: left;
-    width: 290px;
-    height: 25px;
-    border: 0;
-    font-size: 16px;
-    color: #5e6363;
-    margin-left: 10px;
-    margin-top: 5px;
-    padding: 0;
-}
-#search-form-modifier {
-    display: none;
-}
-/* FOOTER------>  */
-footer {
-    height: 88px;
-    margin: 0 auto;
-    font-size: .7em;
-    color: #4e5051;
-}
-footer p.copyright {
-    float: left;
-    padding-top: 55px;
-}
-footer p.copyright small {
-    font-size: 1em;
-}
-ul#footer-nav {
-    float: right;
-    list-style: none;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    padding-top: 55px;
-}
-ul#footer-nav li {
-    float: left;
-    display: block;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-right: 1px solid #c9c8c8;
-}
-ul#footer-nav li:last-child,
-ul#header-nav li.last,
-ul#individual-hasResearchArea li:last-child,
-ul#individual-facultyMemberships li:last-child {
-    border-right: none;
-}
-#footer-nav a {
-    color: #4e5051
-}
-#footer-nav a:hover,
-a.terms,
-a.powered-by-vivo {
-    color: #09C;
-    text-decoration: none;
-}
-#footer-nav  a.terms:hover,
-a.powered-by-vivo:hover {
-    color: #4e5051;
-    text-decoration: none;
-}
-#footer-nav p {
-    margin-bottom: 1.3em;
-}
-
-/* BRANDING ------>  */
-h1.vivo-logo {
-    position: absolute;
-    width: 442px;
-    height: 59px;
-    top: 30px;
-    left: 0;
-    background: url(../images/VIVO-logo.png) 0 0 no-repeat;
-}
-h1.vivo-logo a {
-    display: block;
-    width: 386px;
-    height: 59px;
-}
-.displace {
-    left: -9999px;
-    position: absolute;
-}
-
-#individual-hasResearchArea a {
-    font-size: 13px;
-    background: transparent;
-    border: 1px solid #337ab7;
-    color: #337ab7;
-    font-weight: 400;
-    transition: all 0.5s;
-    padding: .2em .6em .3em;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-#individual-hasResearchArea a:hover {
-    background: #337ab7;
-    color: #fff;
-    text-decoration: none;
-}
-
-#individual-intro h1 {
-    font-size: 1.375em;
-    color: #2485ae;
-}
-
-#individual-intro span.display-title {
-    padding-left: 10px;
-    margin-left: 10px;
-}
-
-#individual-intro span.display-title, h1.fn .display-title {
-    font-size: .825em;
-    border-left: 1px solid #a6b1b0;
-}
-
-ul#individual-hasResearchArea li,
-ul#individual-facultyMemberships li {
-    float: left;
-    padding-right: 10px;
-    margin-right: 10px;
-    border-right: none;
+article.property li h3 {
+    background-image: none;
 }
