--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -73,10 +73,11 @@ body {
     padding: 0 !important;
     margin: 0 !important;
     background: #f3f3f0;
+    vertical-align: top;
 }
 
 .photo-wrapper img {
-    height: 100%;
+//    height: 100%;
     width: 100%;
     padding: 0 !important;
     margin: 0 !important;
@@ -165,6 +166,58 @@ input.search-vivo {
 }
 #search-form-modifier {
     display: none;
+}
+/* FOOTER------>  */
+footer {
+    height: 88px;
+    margin: 0 auto;
+    font-size: .7em;
+    color: #4e5051;
+}
+footer p.copyright {
+    float: left;
+    padding-top: 55px;
+}
+footer p.copyright small {
+    font-size: 1em;
+}
+ul#footer-nav {
+    float: right;
+    list-style: none;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    padding-top: 55px;
+}
+ul#footer-nav li {
+    float: left;
+    display: block;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-right: 1px solid #c9c8c8;
+}
+ul#footer-nav li:last-child,
+ul#header-nav li.last,
+ul#individual-hasResearchArea li:last-child,
+ul#individual-facultyMemberships li:last-child {
+    border-right: none;
+}
+#footer-nav a {
+    color: #4e5051
+}
+#footer-nav a:hover,
+a.terms,
+a.powered-by-vivo {
+    color: #09C;
+    text-decoration: none;
+}
+#footer-nav  a.terms:hover,
+a.powered-by-vivo:hover {
+    color: #4e5051;
+    text-decoration: none;
+}
+#footer-nav p {
+    margin-bottom: 1.3em;
 }
 /* BRANDING ------>  */
 h1.vivo-logo {
