--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -262,6 +262,16 @@ h1.vivo-logo a {
 #individual-intro h1 {
     font-size: 1.375em;
     color: #2485ae;
+    float: left;
+}
+
+#individual-intro #iconControlsRightSide {
+    float: right;
+    background-color: #fff;
+    margin-right: 10px;
+    padding-top: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 #individual-intro span.display-title {
@@ -281,3 +291,4 @@ ul#individual-facultyMemberships li {
     margin-right: 10px;
     border-right: none;
 }
+
